dropshot/tests/fail/bad_version_backwards.stderr
error: "from" version (1.2.3) must be earlier than "until" version (1.2.2)
  --> tests/fail/bad_version_backwards.rs:17:16
   |
17 |     versions = "1.2.3".."1.2.2"
   |                ^^^^^^^
